# xpscerpto

./: ARCHITECTURE.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE-AGREEMENT.md  DIAGRAMS .md  FIPS1403_Mapping.md  HEADER-TEMPLATE.txt  LICENSE  NOTICE  PERFORMANCE.md  README-LEGAL.md  README-LICENSE-SECTION.md  README.md  SECURITY.md  SECURITY_SPEC.md  USAGE_GUIDE.md  WORKFLOWS .md
.github/workflows/: docs-ci.yml  perf-docs.yml
cmake/: GenBuildInfo.cmake  XpsArch.cmake
cmake/keyring/: CMakeLists.txt
cmake/orchestrator/: CMakeLists.txt
cmake/simd/: XpsSimdAddOn.cmake
docs/: ARCHITECTURE.md  CONFIG.md  DIAGRAMS.md  ERROR_TAXONOMY.md  FAQ.md  MEMORY_SECURITY.md  OBSERVABILITY.md  PERFORMANCE.md  PQC_GUIDE.md  SECURITY_SPEC.md  USAGE_GUIDE.md  WORKFLOWS.md  WORKFLOWS_PLUS.md
docs/extra/: Aead.md  Commercial_License_Agreement.md  Dilithium5.md  Fips1403_Mapping.md  Hot_Patch.md  Kyber1024.md  Orchestrator.md  Readme_X25519.md  Xps_Falcon1024_Native_Docs_En.md
